#26 removed unnecessary url parameter from swagger docs. In the patch endpoint a empty arg/parameter no longer nullifies the field
